--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         <a href="sileo://source/https://qwwzi.github.io/repo/" class="button">Sileo</a>
         <a href="zbra://sources/add/https://qwwzi.github.io/repo/" class="button">Zebra</a>
         <a href="apt-repo://https://qwwzi.github.io/repo/" class="button">Saily</a>
-        <p class="maintenance-notice">电报：@qwwzi</p>
+        <p class="maintenance-notice">都是以我自己的喜好 机型 系统版本而来</p>
+<p class="maintenance-notice">仅支持Arm64（无根）</p>
     </div>
 </body>
 </html>
